<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/textbox"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".ui.fragments.ProfileFragment">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:measureWithLargestChild="false">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:measureWithLargestChild="true">

            <TextView
                android:id="@+id/textView"
                style="@style/style_userprofile_headline"
                android:layout_width="match_parent"
                android:text="@string/user_profile_headline" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:measureWithLargestChild="true">

            <TextView
                android:id="@+id/textView2"
                style="@style/style_userprofile_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_hint_name"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/username"
                android:background="@color/background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_profile_hint_name"
                android:textSize="16sp"
                android:padding="5dp"
                android:textColor="@android:color/primary_text_dark"
                android:singleLine="true"
                android:selectAllOnFocus="true" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:measureWithLargestChild="true">

            <TextView
                android:id="@+id/stats"
                style="@style/style_userprofile_headline"
                android:layout_width="wrap_content"
                android:text="@string/user_profile_stats_headline" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:measureWithLargestChild="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/wins"
                    style="@style/style_userprofile_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/user_profile_stats_wins"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/looses"
                    style="@style/style_userprofile_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/user_profile_stats_looses"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/draws"
                    style="@style/style_userprofile_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/user_profile_stats_draws"
                    android:textSize="16sp"
                    android:paddingBottom="10dp" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

</LinearLayout>
